--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -1,10 +1,10 @@
 # This file is auto-generated during the composer install
 parameters:
-    database_host: localhost
+    database_host: 127.0.0.1
     database_port: 8889
     database_name: mediazmj_MediaBayProd
     database_user: mediazmj
-    database_password: '3+f9mJ5#1n0q'
+    database_password: 3+f9mJ5#1n0q
     mailer_transport: smtp
     mailer_host: localhost
     mailer_user: support@finsensitive.com
